syntax = "proto3";

package grpc.user;

option java_multiple_files = true;
option java_package = "com.grpc.user";

message UserRequest {
  string orderId = 1;
  int32 price = 2;
  bool prepaid = 3;
  string paymentUser = 4;
}

message UserResponse {
  bool success = 1;
  string message = 2;
}

service UserService {
  rpc payOrder(UserRequest) returns (UserResponse) {}
}